Try to fix the mobile overflow issue

--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -101,7 +101,7 @@ html {
     margin-left: 0;
 }
 
-html, body, .contents {
+html, body, .contents, main {
     height: 100%;
 }
 
